@@ -17,6 +17,10 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
 
+INSTALL, README:  Update mailing address to real-time address.  MSW  6/27/2000
+
+server/login.c: Load and save usekeys value in player save file.  MSW 6/27/2000
+
 Patch by Jeffry Hantin which fixes glow objects in map.
 insert_ob_in_map_simple now will call the appropriate light updating code.
 Applied by MSW 6/26/2000
